# lgmproxies

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
lgmproxies/: config.py  gaskell_hull2023.py  logs.py
lgmproxies/datasets/: catalogue.py  chatgpt.py  datamanager.py  manager.py  naturalearth.py  tierney.py
notebooks/: bayesian_calibration_examples.ipynb  deltao18_sw.ipynb  play.ipynb
scripts/: save_notebook.sh
