[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lgmproxies"
authors = [
    {name = "Mahé Perrette", email = "mahe.perrette@gmail.com"},
]
description='Proxy data calibration for the LGM'
readme = "README.md"
requires-python = ">=3.9"
license-files= [ "LICENSE" ]

dynamic = ["version", "dependencies"]

[project.urls]
homepage = "https://github.com/perrette/lgmproxies"

# [tool.setuptools_scm]
# write_to = "lgmproxies/_version.py"

[tool.setuptools.dynamic]
dependencies =  {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "lgmproxies/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "lgmproxies",
    "lgmproxies.*",
]

[ tool.setuptools.package-data ]
lgmproxies = ["**/*"]

[project.scripts]
lgmproxies-download = "lgmproxies.datasets.manager:main"


[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = false

[tool.ruff]
line-length = 88
target-version = "py312"  # Match your actual Python version
select = ["E", "F", "I", "B"]  # E: pycodestyle, F: pyflakes, I: isort, B: flake8-bugbear
ignore = ["E501"]  # Ignore line length errors if Black handles formatting

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true
